Fix offcenter details

--- a/docs/style.css
+++ b/docs/style.css
@@ -112,7 +112,7 @@ a {
 .section {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 22px;
 }
 
